# ncmdump-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  syntax-check.yml
bilibili-api/: Cargo.toml
bilibili-api/src/: auth.rs  client.rs  download.rs  error.rs  lib.rs  search.rs  types.rs  video.rs  wbi.rs
docs/: netease-api.md
ncmdump/: Cargo.toml
ncmdump-cli/: Cargo.toml
ncmdump-cli/src/: main.rs
ncmdump-ffi/: Cargo.toml
ncmdump-ffi/src/: lib.rs
ncmdump/src/: cipher.rs  decoder.rs  error.rs  lib.rs  metadata.rs  tag.rs
netease-api/: Cargo.toml
netease-api/src/: auth.rs  client.rs  crypto.rs  error.rs  lib.rs  playlist.rs  search.rs  track.rs  user.rs
