[workspace]
members = ["ncmdump", "ncmdump-cli", "ncmdump-ffi"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[workspace.lints.rust]
unsafe_code = "warn"
