[package]
name = "bilibili-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bilibili video/audio API client for ncmdump-rs"

[lints]
workspace = true

[dependencies]
chrono = "0.4"
dirs = "6"
md-5 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
urlencoding = "2"
