[package]
name = "ncmdump-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ncmdump = { path = "../ncmdump" }
netease-api = { path = "../netease-api" }
walkdir = "2"

[lints]
workspace = true
