[package]
name = "ncmdump"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes = "0.8"
base64 = "0.22"
ecb = "0.1"
lofty = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints]
workspace = true
