[package]
name = "netease-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes = "0.8"
cbc = "0.1"
base64 = "0.22"
num-bigint = "0.4"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
urlencoding = "2"

[lints]
workspace = true
